
Changelog
=========

2018.5.0 (unreleased)
---------------------

- Map gever_admins to the administrator_group in example content. [njohner]
- Fix parent reference number fetching for repository roots. [Rotonen]
- OGGBundle: Fix encoding issue with UNC filepaths containing non-ASCII characters. [lgraf]
- Send notification dispatch exceptions to Raven. [Rotonen]
- Fix sharing-form local_roles inheritance fallback and skip it for administators and managers. [phgross]
- Do not present the paste UI to users without 'Copy or Move' on the target. [Rotonen]
- Disallow agency-support for private tasks. [elioschmutz]
- Update task-added activity summary for private tasks. [elioschmutz]
- Add is_private field for tasks. [elioschmutz]
- Vendor opengever.ogds.models into the opengever.core codebase. [Rotonen]
- Add trashing of protocol excerpts. [njohner]
- Display title for NullObject in meeting template selection. [njohner]
- Fix styling of favorite button. [njohner]
- Update the checksum when deleting attachments from E-mails. [njohner]
- return fullname of responsible in dossier GET. [njohner]
- Revoke temporary roles also when closing direct-execution tasks. [phgross]
- Add the GUI for task-reminders. [elioschmutz]
- Add new docproperty ogg.dossier.external_reference. [njohner]
- Exclude searchroots from subdossier listings. [Rotonen, lgraf]
- Add filters (active and all) to membership listing. [njohner]
- Do not add a task-reminder activity if task is finished. [elioschmutz]
- Add restapi endpoints to add and delete task-reminders. [elioschmutz]
- Remove leftover checkout and edit, and cancel actions for sablon and proposal templates. [njohner]
- Do not include paragraphs in comittee table of contents. [njohner]
- Add TaskReminder to handle reminders in annotations and sql. [elioschmutz]
- Allow users to retry creating a file from a Oneoffixx template. [Rotonen]
- Add TaskReminderActivity object. [elioschmutz]
- Make paragraph templates deletable. [Rotonen]